Gradle: Fix running tests with Java 17
Since Java 17 it is required to provide a JVM argument to use the
`withEnvironment` function from Kotest [1].

[1]: https://kotest.io/docs/next/extensions/system_extensions.html#system-environment

Signed-off-by: Martin Nonnenmacher <martin.nonnenmacher@bosch.io>