@@ -91,6 +91,13 @@ subprojects {
             apiVersion = "1.7"
         }
     }
+
+    tasks.withType<Test>().configureEach {
+        // Required since Java 17, see: https://kotest.io/docs/next/extensions/system_extensions.html#system-environment
+        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+            jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+        }
+    }
 }
 
 tasks.named<DependencyUpdatesTask>("dependencyUpdates").configure {
